# ChangeLog for dev-java/lucene-queries
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Feb 2009; Serkan Kaba <serkan@gentoo.org> lucene-queries-2.4.0.ebuild:
  Fix missing doc QA warning.

  25 Feb 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
  +lucene-queries-2.4.0.ebuild:
  Version Bump

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
  creating metadata.xml to shut up repoman

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +ChangeLog:
  adding ChangeLog to shut repoman up