@@ -1,6 +1,6 @@
 DIST lucene-2.3.1-src.tar.gz 4597493 RMD160 40d8c78e841a65948615ccdbfbde5c4373691e46 SHA1 b1d5b54d5a072f7b166f98cadb7541b47e10bcd5 SHA256 84ddee3a667242917c8117d9e273d9e81ef7f4015c69a7758f12b8018054e646
 DIST lucene-2.4.0-src.tar.gz 5053702 RMD160 c6c33faec176af806bf5e70ccef76458b1fd5f6c SHA1 7e7e59db8a006521459cde70376784bc95dac2f2 SHA256 01509848b8cf2e6675a38fc06124c7622cdd573e975ebcc893c36903b416b7c7
-EBUILD lucene-queries-2.3.1.ebuild 242 RMD160 73194101c13e48242abed9a3d2b61447aa314e05 SHA1 6335746399690422e921f8c15aaa461c0eed394b SHA256 aa14a669ed86db3865a3e08dcb75f506f9aa7e48e1b8bb36a354fff6089d9fdb
+EBUILD lucene-queries-2.3.1.ebuild 224 RMD160 a0822bf5d0844f112a59a1efa5e3204a4a8e495f SHA1 55c460ac01db55fd4a283da8071f64dfd3efcb47 SHA256 74e96cb1d590403ba6b523fe332b85e9d775e868995094e96b3188b7fb4f2d4c
 EBUILD lucene-queries-2.4.0.ebuild 224 RMD160 12aab0c238b48c3a7d91ba53f4b2196eee7be68a SHA1 7ef326609ca3c6d702a2fd44ced395104abd9aeb SHA256 781843839446ad72b88600fe82e6e1cd6fa80820bdd8b95804dd40e3741603be
-MISC ChangeLog 557 RMD160 af3690e9e2a490c9331bdb2212c2b7e4e8a81147 SHA1 17f4ae962dcadb9b0ed9435b9ca3cc3fdf9d43e1 SHA256 786a07d7aa131e7de0249e8b9f02f7f3b898459418efaeeac7aeb50f17c9fd46
-MISC metadata.xml 240 RMD160 c81de795233d4af9d30d569e25a7b93995465624 SHA1 7b718f73e2c1d5ecf9975079e904f6334b0a1383 SHA256 4d60444059e3d7d2be42254887f9630cbd6e9d92811c30e722bff69fbeca1013
+MISC ChangeLog 690 RMD160 addb0ce220cb3e592315fa0afdb4255515c4b430 SHA1 1a3d0caaa4b3fd35f0aa7b62f3fdf21a43ba9365 SHA256 bb72f26e768f64ddd4eae1f70826e0637f515aab74373f060a5dd32c2405f8d4
+MISC metadata.xml 341 RMD160 e6ea871443ae4bc15454957fcf31611dea320d44 SHA1 9d4f16e419efcd680b13ca2282f94b3afdcc1074 SHA256 47496f7e61755ac99be8817d63edf054e393459b867ef15267e22adaf2242ffe
