@@ -1,6 +1,6 @@
 DIST lucene-2.3.1-src.tar.gz 4597493 RMD160 40d8c78e841a65948615ccdbfbde5c4373691e46 SHA1 b1d5b54d5a072f7b166f98cadb7541b47e10bcd5 SHA256 84ddee3a667242917c8117d9e273d9e81ef7f4015c69a7758f12b8018054e646
 DIST lucene-2.4.0-src.tar.gz 5053702 RMD160 c6c33faec176af806bf5e70ccef76458b1fd5f6c SHA1 7e7e59db8a006521459cde70376784bc95dac2f2 SHA256 01509848b8cf2e6675a38fc06124c7622cdd573e975ebcc893c36903b416b7c7
-EBUILD lucene-wordnet-2.3.1.ebuild 242 RMD160 5029f9e36fb6a827305e7b819a089a10476c4db3 SHA1 4bb6fd3d19f6e9449c7221bfbc73264891b45e26 SHA256 724e57d9999b3476f2b036dc5a45f83cc407f12bb866009fe0b2f225225bb423
-EBUILD lucene-wordnet-2.4.0.ebuild 242 RMD160 fc77ec08f98d90754e025269ac2fa22e01b57b61 SHA1 254334f6926c628bbe56a04a82bcf1b24cf78076 SHA256 d0e40c5da2d4b083c207e78418a24b0ec5e863ccf384caa7480aa06777e6e379
-MISC ChangeLog 450 RMD160 93a539220851b45347daf7727de41216fd709931 SHA1 9e26d423dfc1d0ef8f6db4431480cea87254a9e9 SHA256 8bbfb21d1ca76c09156e4be756384f19eb51fc64acddf88bd58c06dd90b61cc8
+EBUILD lucene-wordnet-2.3.1.ebuild 224 RMD160 de941bef3bd8ddb04b658d87df602611ac0dae6c SHA1 8b99cc3e34f6a462f9f77296a7d632de1058a9ef SHA256 6256445d1c2c1977b6272993eda3db1270d595fe8ed5f7047ae239173b8ccd8e
+EBUILD lucene-wordnet-2.4.0.ebuild 224 RMD160 c64c855183f431a5329d6c35cc203fa3a7714417 SHA1 88051289392e6422b602959dd4f741590f07da8f SHA256 a8a0df296adb52402e56d8b118517328331eba4e3254043bfe08810e692b49dd
+MISC ChangeLog 611 RMD160 ef216317cb7ec356561663eefd7fd866da550cfc SHA1 754a28fb33d16b543f0352e0a5d1613bc9df2c54 SHA256 56afc6728a0498e02a178e5ee6b431354b458f4287db96580e4bf3711c928f82
 MISC metadata.xml 240 RMD160 d794d6a61f5632bd41e8f92921240ca0bff1369c SHA1 a181b826aceba8a42b2ca4e391e5cae205a99a28 SHA256 f6849b6667cc99de1e23a5a7c647d3839551fce2debe67ba27aa3930b4caa347
