@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Feb 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
+  lucene-wordnet-2.3.1.ebuild, lucene-wordnet-2.4.0.ebuild:
+  QA: remov DOC line of ebuild
+
   25 Feb 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
   +lucene-wordnet-2.4.0.ebuild:
   Version Bump
